# TopStep-trader

./: .clinerules  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backtest/: engine.py
comms/: notifier.py
config/: constants.py  environments.py  settings.py
data_ingestion/: # MISSION & IDENTITY.md  __init__.py  auth_client.py  data_models.py  order_book.py  rest_client.py  ws_client.py
execution/: __init__.py  execution_models.py  executor.py  order_builder.py
risk_controller/: __init__.py  position_sizer.py  risk_core.py  risk_models.py
scripts/: promote_to_live.sh  run_demo.sh
signal_engine/: __init__.py  indicators.py  signal_core.py  signal_models.py
state_manager/: state.py
tests/: test_execution.py  test_indicators.py  test_just_import.py  test_risk.py  test_signals.py
topstep_bot/signal_engine/: indicator_audit.py  indicator_validator.py
